# WMI-Parser-Forensic

./: .gitignore  LICENSE  README.md  pyproject.toml  wmi-class-carve.cmd  wmi-class-carve.ps1  wmi.py
.github/workflows/: tests.yml
scripts/: wmi-class-carve.cmd  wmi-class-carve.ps1
src/wmi_forensics/: __init__.py  __main__.py  binary_reader.py  carver.py  ccm_rua.py  cim.py  class_carve_cli.py  class_carver.py  cli.py  correlator.py  heuristics.py  hunt_cli.py  models.py  output.py  payload.py  reporter.py  rua_cli.py  xlsx_writer.py
tests/: conftest.py  test_carver.py  test_ccm_rua.py  test_cim.py  test_class_carver.py  test_cli.py  test_heuristics.py  test_models.py  test_output.py  test_payload.py  test_reporter.py  test_xlsx_writer.py
